# pico-project-template

./: CMakeLists.txt  README.md
blink/: CMakeLists.txt  blink.c
